[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-polars = { version = "0.9", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.35.2", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
